# fastapi-vue-postgresql

./: .env  .gitignore  README.md
backend/: dev.sh
backend/app/: pyproject.toml
backend/app/alembic/versions/: 20250315_add_order_and_shipping_address.py
backend/app/app/: main.py  utils.py
backend/app/app/api/api_v1/: api.py
backend/app/app/api/api_v1/endpoints/: addresses.py  orders.py  utils.py
backend/app/app/crud/: __init__.py  crud_order.py  crud_shipping_address.py
backend/app/app/db/: base.py
backend/app/app/models/: __init__.py  order.py  shipping_address.py  user.py
backend/app/app/schemas/: __init__.py  order.py  shipping_address.py
backend/app/scripts/: install-poetry.sh  run-initial-data.sh  start-fastapi-local.sh
frontend/: Dockerfile  README.md  index.html  nginx.conf  openapi-ts.config.ts  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.ts  router.ts  shims-tsx.d.ts  shims-vue.d.ts  styles.css
frontend/src/client/: index.ts  sdk.gen.ts  types.gen.ts
frontend/src/i18n/: index.ts
frontend/src/layouts/: AppLayout.vue  MemberLayout.vue  StorefrontLayout.vue
frontend/src/services/: navigation.ts
frontend/src/services/api/: auth.ts  index.ts  members.ts  password.ts  shared.ts  users.ts
frontend/src/store/admin/: actions.ts
frontend/src/store/main/: actions.ts
frontend/src/stores/: auth.ts  users.ts
frontend/src/types/: user.ts
frontend/src/views/: StorefrontHomePage.vue
frontend/src/views/app/: AdminUsersPage.vue  DashboardPage.vue  ForgotPasswordPage.vue  LoginPage.vue  ResetPasswordPage.vue
(+16 files in other folders)
